
RG_TESTS		= rg0001\
			  rg0002\
			  rg0003\
			  rg0004\
			  rg0005\
			  rg0006\
			  rg0007\
			  rg0008

LALR_TESTS		= lalr0001\
			  lalr0002\
			  lalr0003\
			  lalr0004\
			  lalr0005\
			  lalr0006\
			  lalr0007\
			  lalr0008\
			  lalr0009\
			  lalr0010\
			  lalr0011\
			  lalr0012\
			  lalr0013\
			  lalr0014\
			  lalr0015\
			  lalr0016\
			  lalr0017\
			  lalr0018\
			  lalr0019\
			  lalr0020

EXTRA_DIST		= $(RG_TESTS)\
			  $(LALR_TESTS)
